--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "nodemon": "nodemon ."
+    "start": "nodemon ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.3.3",
+    "graphql": "^14.1.1",
     "nodemon": "^1.18.9"
   }
 }
